<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="password"
            app:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/group_settings">
        <EditTextPreference
            app:icon="@drawable/ic_baseline_memory_24"
            app:key="preConnect"
            app:title="@string/oppa_preconnect"
            app:summary="@string/oppa_preconnect_summary"
            app:defaultValue="8" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="sni"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="certificatePinSHA256"
            app:title="@string/pinned_certchain_sha256"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="allowInsecure"
            app:title="@string/allow_insecure" />
    </PreferenceCategory>

</PreferenceScreen>
